[tool.black]
line_length = 110
target-version = ['py36']

[tool.poetry]
name = "simpletasks"
version = "0.1.0"
description = "A simple library to run one task, or multiples ones in sequence or parallel"
authors = ["Thomas Muguet <thomas.muguet@upowa.org>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/upOwa/simpletasks"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6.1"
click = {version = "^7.1.2", optional = true}
tqdm = {version = "^4.54.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
tox-poetry-installer = {extras = ["poetry"], version = "^0.6.0"}
pytest-flake8 = "^1.0.6"
pytest-mypy = "^0.8.0"

[tool.poetry.extras]
click = ["click"]
tqdm = ["tqdm"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
